--- a/miniprogram/components/myTabbar/myTabbar.wxml
+++ b/miniprogram/components/myTabbar/myTabbar.wxml
@@ -1,4 +1,4 @@
-<van-tabbar active="{{ active }}" bind:change="onChange" class="navs">
+<van-tabbar active="{{ active }}" bind:change="onChange" active-color="#2DAB6B" class="navs">
   <van-tabbar-item icon="wap-home-o" />
   <van-tabbar-item icon="records" />
   <van-tabbar-item icon="setting-o" />
