--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -2,7 +2,7 @@
 .header-view {
   background-color: #2DAB6B;
   color: #ffffff;
-  box-sizing: border-box;
+  padding-top: 20rpx;
   padding-left: 20rpx;
   font-size: 28rpx;
 }
