--- a/miniprogram/pages/index/components/recordMoney/recordMoney.wxml
+++ b/miniprogram/pages/index/components/recordMoney/recordMoney.wxml
@@ -1,8 +1,7 @@
 <!--components/recordMoney/recordMoney.wxml-->
-<van-button round class="btn">
+<van-button round class="btn" bindtap="sendMessage">
   <view class="contian">
-    <van-icon name="records" class="icon" size="20px" />
+    <van-icon name="records" class="icon-component" size="20px" />
     <text class="msg">记一笔</text>
   </view>
-
 </van-button>
