--- a/miniprogram/pages/index/components/recordMoney/recordMoney.wxss
+++ b/miniprogram/pages/index/components/recordMoney/recordMoney.wxss
@@ -1,9 +1,12 @@
 /* components/recordMoney/recordMoney.wxss */
+.btn {
+  position: fixed;
+  right: 20rpx;
+  bottom: 150rpx;
+}
 
-.van-button {
-
-  background-color: #ffffff;
-  box-shadow: 0px 0px 5px rgb(41, 39, 39);
+.btn .van-button {
+  box-shadow: 0px 0px 8rpx rgb(156, 151, 151);
 }
 
 .contian {
@@ -11,7 +14,7 @@
   align-items: center;
 }
 
-.icon,
+.icon-component,
 .msg {
   font-size: 28rpx;
   color: #2DAB6B;
