--- a/miniprogram/pages/index/components/recordMoney/selectMoneyType.wxml
+++ b/miniprogram/pages/index/components/recordMoney/selectMoneyType.wxml
@@ -6,8 +6,10 @@
           bind:click="tapEvent" size="small" wx:for="{{btns}}" wx:key="item">{{item}}
         </van-button>
       </view>
-      <van-button class="btn-view date-btn" size="small" icon="arrow-down" bind:click="onClickTime">7月24日</van-button>
+      <van-button class="btn-view date-btn" size="small" icon="arrow-down" bind:click="onClickTime">{{time}}
+      </van-button>
     </view>
-
+    <van-field class="money" clearable bind:change="onChange" type="digit" model:value="{{ money }}" label="￥">
+    </van-field>
   </view>
 </template>
