--- a/miniprogram/pages/index/components/recordMoney/recordMoney.wxss
+++ b/miniprogram/pages/index/components/recordMoney/recordMoney.wxss
@@ -8,6 +8,7 @@
 .btn .van-button {
   box-shadow: 0px 0px 8rpx rgb(156, 151, 151);
 }
+
 .contian {
   display: inline-flex;
   align-items: center;
@@ -50,7 +51,8 @@
 .btn-view.active .van-button {
   background-color: rgb(196, 189, 149) !important;
 }
-.money .van-cell{
+
+.money .van-cell {
   margin-top: 20rpx;
 }
 
@@ -59,4 +61,36 @@
   min-width: 0 !important;
   margin-right: 20rpx;
   max-width: 40rpx !important;
+}
+
+.icons-view {
+  margin-top: 20px;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  justify-items: center;
+  grid-row-gap: 10px;
+}
+
+.icon-item {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.icons {
+  width: 60rpx;
+  height: 60rpx;
+  font-size: 20px;
+  background-color: #edeeed;
+  border-radius: 50%;
+  line-height: 60rpx;
+  color: rgb(182, 178, 178);
+  text-align: center;
+  margin-bottom: 8px;
+}
+
+.icon-name {
+  color: #dcdddc;
+  font-size: 24rpx;
 }
