--- a/miniprogram/pages/index/components/recordMoney/recordMoney.wxss
+++ b/miniprogram/pages/index/components/recordMoney/recordMoney.wxss
@@ -23,6 +23,7 @@
 .page-type {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .selectMoney {
@@ -93,4 +94,23 @@
 .icon-name {
   color: #dcdddc;
   font-size: 24rpx;
+}
+
+.is-active .icons {
+  background-color: rosybrown;
+  color: #fff;
+}
+
+.is-active .icon-name {
+  color: rgb(77, 73, 73);
+}
+
+.submitBtn{
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: 20px;
+}
+.submitBtn .van-button{
+  width: 100%;
 }
